--- a/extensions/composer.json
+++ b/extensions/composer.json
@@ -33,6 +33,7 @@
         "post-package-update": "Bolt\\Composer\\EventListener\\PackageEventListener::handle"
     },
     "require": {
-        "bobdenotter/seo": "^0.14.1"
+        "bobdenotter/seo": "^0.14.1",
+        "juststeveking/boltmedium": "^2.0"
     }
 }
