--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "drupal/config_installer": "^1.5",
         "drupal/console": "^1.0.1",
         "drupal/core": "~8.0",
+        "drupal/pathauto": "^1.0",
         "drupal/redirect": "^1.0",
         "drupal/seo_checklist": "^4.1",
         "drush/drush": "~8.0|^9.0.0-beta7",
