--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -3,12 +3,15 @@ module:
   block: 0
   block_content: 0
   breakpoint: 0
+  checklistapi: 0
   ckeditor: 0
+  coffee: 0
   color: 0
   comment: 0
   config: 0
   contact: 0
   contextual: 0
+  ctools: 0
   datetime: 0
   dblog: 0
   dynamic_page_cache: 0
@@ -22,23 +25,28 @@ module:
   image: 0
   link: 0
   menu_ui: 0
+  metatag: 0
   node: 0
   options: 0
   page_cache: 0
   path: 0
   quickedit: 0
   rdf: 0
+  redirect: 0
   search: 0
+  seo_checklist: 0
   shortcut: 0
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   tour: 0
   update: 0
   user: 0
   views_ui: 0
   menu_link_content: 1
+  pathauto: 1
   views: 10
   standard: 1000
 theme:
