--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "drupal/console": "^1.0.1",
         "drupal/core": "~8.0",
         "drupal/metatag": "^1.4",
+        "drupal/paragraphs": "^1.2",
         "drupal/pathauto": "^1.0",
         "drupal/redirect": "^1.0",
         "drupal/seo_checklist": "^4.1",
