--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/noesnaterse/wiredpea#readme",
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0",
     "fancy-log": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
