--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/bootstrap_business": "^1.0@beta",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.7.0",
+        "drupal/seo_checklist": "^4.1",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
