--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "drupal/pathauto": "^1.6",
         "drupal/redirect": "^1.5",
         "drupal/seo_checklist": "^4.1",
+        "drupal/xmlsitemap": "^1.0@RC",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
