--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,15 @@
         "drupal/coffee": "^1.0@beta",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.7.0",
+        "drupal/easy_breadcrumb": "^1.12",
+        "drupal/editor_advanced_link": "^1.6",
+        "drupal/linkit": "^4.3",
         "drupal/metatag": "^1.11",
         "drupal/pathauto": "^1.6",
         "drupal/redirect": "^1.5",
+        "drupal/search404": "^1.0",
         "drupal/seo_checklist": "^4.1",
+        "drupal/seo_starter": "1.x-dev",
         "drupal/xmlsitemap": "^1.0@RC",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
