--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
+        "drupal/advagg": "^4.0",
         "drupal/bootstrap_business": "^1.0@beta",
         "drupal/coffee": "^1.0@beta",
         "drupal/console": "^1.0.2",
@@ -33,6 +34,7 @@
         "drupal/redirect": "^1.5",
         "drupal/scheduler": "^1.1",
         "drupal/search404": "^1.0",
+        "drupal/security_review": "1.x-dev",
         "drupal/seo_checklist": "^4.1",
         "drupal/seo_starter": "1.x-dev",
         "drupal/xmlsitemap": "^1.0@RC",
