--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "drupal/diff": "^1.0@RC",
         "drupal/easy_breadcrumb": "^1.12",
         "drupal/editor_advanced_link": "^1.6",
+        "drupal/gutenberg": "^1.10",
         "drupal/linkit": "^4.3",
         "drupal/metatag": "^1.11",
         "drupal/pathauto": "^1.6",
