--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "drupal/linkit": "^4.3",
         "drupal/metatag": "^1.11",
         "drupal/pathauto": "^1.6",
+        "drupal/recaptcha": "^2.4",
         "drupal/redirect": "^1.5",
         "drupal/scheduler": "^1.1",
         "drupal/search404": "^1.0",
