--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/advagg": "^4.0",
+        "drupal/antibot": "^1.2",
         "drupal/bootstrap_business": "^1.0@beta",
         "drupal/coffee": "^1.0@beta",
         "drupal/console": "^1.0.2",
@@ -29,6 +30,7 @@
         "drupal/easy_breadcrumb": "^1.12",
         "drupal/editor_advanced_link": "^1.6",
         "drupal/gutenberg": "^1.10",
+        "drupal/honeypot": "^1.30",
         "drupal/linkit": "^4.3",
         "drupal/metatag": "^1.11",
         "drupal/pathauto": "^1.6",
