--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "eslint": "^6.8.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
@@ -20,6 +21,8 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
+        "stylelint": "^13.3.0",
         "vue-template-compiler": "^2.6.11"
-    }
+    },
+    "dependencies": {}
 }
