--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "drupal/contentanalysis": "1.x-dev",
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-project-message": "^8.8",
-        "drupal/core-recommended": "^8.8"
+        "drupal/core-recommended": "^8.8",
+        "drupal/seo_checklist": "^4.1"
     },
     "conflict": {
         "drupal/drupal": "*"
