--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-project-message": "^8.8",
         "drupal/core-recommended": "^8.8",
+        "drupal/google_analytics": "^3.0",
         "drupal/metatag": "^1.13",
         "drupal/pathauto": "^1.8",
         "drupal/redirect": "^1.6",
