--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/core-project-message": "^8.8",
         "drupal/core-recommended": "^8.8",
         "drupal/google_analytics": "^3.0",
+        "drupal/honeypot": "^2.0",
         "drupal/metatag": "^1.13",
         "drupal/pathauto": "^1.8",
         "drupal/redirect": "^1.6",
