--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-project-message": "^8.8",
         "drupal/core-recommended": "^8.8",
+        "drupal/fontawesome": "^2.17",
         "drupal/google_analytics": "^3.0",
         "drupal/honeypot": "^2.0",
         "drupal/metatag": "^1.13",
