--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-project-message": "^8.8",
         "drupal/core-recommended": "^8.8",
+        "drupal/extlink": "^1.3",
         "drupal/fontawesome": "^2.17",
         "drupal/google_analytics": "^3.0",
         "drupal/honeypot": "^2.0",
