--- a/web/modules/contrib/seo_checklist/seo_checklist.info.yml
+++ b/web/modules/contrib/seo_checklist/seo_checklist.info.yml
@@ -2,13 +2,13 @@ name: SEO Checklist
 type: module
 description: Uses best practices to check for proper search engine optimization.
 package: SEO
-# core: 8.x
+core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
-  - checklistapi
+  - drupal:checklistapi
 configure: checklistapi.checklists.seo_checklist
 
-# Information added by Drupal.org packaging script on 2017-12-09
-version: '8.x-4.1'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2021-05-14
+version: '5.0.0'
 project: 'seo_checklist'
-datestamp: 1512797888
+datestamp: 1621000996
